<resources>
    <string name="app_name">Projeto_01</string>
    <string name="cd_logo">Logo</string>
    <string name="txv_lbl_welcome">Seja Bem-vindo</string>
    <string name="btn_lbl_login">Login</string>
    <string name="btn_lbl_signup">Signup</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirme a senha</string>
    <string name="btn_lbl_to_signup">Cadastrar</string>
    <string name="ctn_description_logo">Logo</string>
    <string name="btn_lbl_logout">Sair</string>
</resources>