<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/cd_logo"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:maxHeight="200dp"
        android:src="@drawable/ic_untitled"
        tools:maxWidth="300dp"
        />

    <TextView
        android:id="@+id/txvWelcome"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_lbl_welcome"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:text="@string/btn_lbl_login"
        android:textAlignment="gravity"
        tools:layout_marginTop="24dp"

         />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="8dp"
        android:text="@string/btn_lbl_signup" />



</androidx.appcompat.widget.LinearLayoutCompat>