<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="203dp"
        android:layout_height="127dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_untitled"
        android:contentDescription="@string/ctn_description_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_name" />

    <EditText
        android:id="@+id/edt_home_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:autofillHints="Nome"
        android:enabled="false"
        android:inputType="text"
        android:text="@string/hint_name"
        android:hint="@string/hint_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_email" />

    <EditText
        android:id="@+id/edt_home_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:autofillHints="Nome"
        android:enabled="false"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:text="@string/hint_email" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/btn_lbl_logout" />
</LinearLayout>